--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,15 @@
 
     <string name="action_settings">Settings</string>
 
+    <!--Drawer-->
+    <string name="drawer_switch">Switch</string>
+    <string name="drawer_theme">Theme</string>
+    <string name="drawer_ipcam">IP Camera</string>
+    <string name="drawer_preference">Preference</string>
+    <string name="drawer_about">About</string>
+    <string name="drawer_reference">Reference</string>
+    <string name="drawer_exit">Exit</string>
+
+
+
 </resources>
