5/16 Finish all features

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,4 +4,62 @@
     <string name="action_settings">設定</string>
     <string name="navigation_drawer_close">關閉側邊攔</string>
     <string name="navigation_drawer_open">開啟側邊攔</string>
+    <string name="about_checkVersion">檢查新版本</string>
+    <string name="action_refresh">重新整理</string>
+    <string name="action_save">儲存</string>
+    <string name="alertDialog_confirm">確定</string>
+    <string name="cancel_button">取消</string>
+    <string name="drawer_about">關於</string>
+    <string name="drawer_exit">離開</string>
+    <string name="drawer_ipcam">網路攝影機</string>
+    <string name="drawer_preference">偏好設定</string>
+    <string name="drawer_reference">說明</string>
+    <string name="drawer_switch">開關</string>
+    <string name="drawer_theme">主題</string>
+    <string name="ipcam_fab_Stop">停止串流</string>
+    <string name="ipcam_fab_load">開始串流</string>
+    <string name="modbus_not_init">無法初始化 Modbus</string>
+    <string name="modbus_not_read">無法讀取 Modbus</string>
+    <string name="modbus_not_write">無法寫入 Modbus</string>
+    <string name="modbus_refreshing">重新載入中</string>
+    <string name="pref_delete_confirm">你確定要刪除</string>
+    <string name="pref_header_ipcam">網路攝影機</string>
+    <string name="pref_header_switch">開關</string>
+    <string name="pref_header_theme">主題</string>
+    <string name="pref_summary_showfps">在右下角顯示 FPS</string>
+    <string name="pref_switch_host_title">PLC 的 Slave IP</string>
+    <string name="pref_switch_port_title">PLC 連接垾 (502)</string>
+    <string name="pref_switch_retries_title">重試連接次數 (1)</string>
+    <string name="pref_switch_timeout_title">連接逾時 (500)</string>
+    <string name="pref_title_showfps">顯示 FPS</string>
+    <string name="pref_title_webcamIP">網路攝影機 IP 位址</string>
+    <string name="reference_text">預設聯接垾：500</string>
+    <string name="savePrefName">儲存為&#8230;</string>
+    <string name="savePrefNameBlankAlert">請輸入正確名稱</string>
+    <string name="save_button">儲存</string>
+    <string name="switch_ac_bt_windmedium">適中</string>
+    <string name="switch_ac_bt_windstrong">強烈</string>
+    <string name="switch_ac_bt_windweak">微弱</string>
+    <string name="switch_ac_nowtemp">溫度</string>
+    <string name="switch_ac_targettemp">設定溫度</string>
+    <string name="switch_ac_tx_toggle">電源</string>
+    <string name="switch_ac_tx_wind">風量</string>
+    <string name="switch_elevator_bt_firstfloor">一樓</string>
+    <string name="switch_elevator_bt_secondfloor">二樓</string>
+    <string name="switch_elevator_tx_floor">樓層</string>
+    <string name="switch_light_1">玄關</string>
+    <string name="switch_light_2">樓梯</string>
+    <string name="switch_light_3">走廊</string>
+    <string name="switch_light_4">客廳</string>
+    <string name="switch_light_5">廁所一</string>
+    <string name="switch_light_6">廚房</string>
+    <string name="switch_light_7">廁所二</string>
+    <string name="switch_light_8">臥室</string>
+    <string name="switch_tab_tab1_title">電燈</string>
+    <string name="switch_tab_tab2_title">空調</string>
+    <string name="switch_tab_tab3_title">電梯</string>
+    <string name="theme_clear_all_alert">你確定要刪除所有主題？</string>
+    <string name="theme_clear_all_title">清除所有主題</string>
+    <string name="theme_refresh_prefList">重新整理中 (長按以刪除所有)</string>
+    <string name="title_activity_settings">設定</string>
 </resources>
